--- a/views/events/new.ejs
+++ b/views/events/new.ejs
@@ -9,7 +9,7 @@
                     <div class="form-group p-2 p-lg-3 border rounded  mx-auto">
                         <div class="form-group  m-lg-3">
                             <label for="name[title]">Title:</label>
-                            <input type="text" name="event[title]" id="EventName" placeholder="Event Name" class="form-control " required="true">
+                            <input type="text" name="event[title]" minlength="3" id="EventName" placeholder="Event Name" class="form-control " required="true">
                         </div>
                         <div class="form-group m-lg-3">
                             <label for="sel1" name="event[EventType]">Event Type:</label>
@@ -48,11 +48,11 @@
 
                             <div class="form-group  m-lg-3">
                                 <label for="event[breif]">Event  Description:</label>
-                                <textarea name="event[breif]" placeholder="Breif" rows="5" class="form-control"></textarea>
+                                <textarea name="event[breif]" minlength="35" placeholder="Breif" rows="5" class="form-control"></textarea>
                             </div>
                             <div class="form-group  m-lg-3">
                                 <label for="event[link]">Official Link:</label>
-                                <input type="text" name="event[link]" id="EventName" placeholder="official link" class="form-control ">
+                                <input type="text" name="event[link]"  id="EventName" placeholder="official link" class="form-control ">
                             </div>
                             <input type="submit" name="submit" class="btn btn-success btn-lg ml-3">
                     </div>
