--- a/views/projects/new.ejs
+++ b/views/projects/new.ejs
@@ -15,8 +15,8 @@
                         <div class="form-group m-lg-3">
                             <label for="sel1" name="project[type]">Project Type:</label>
                             <select class="form-control" name="project[type]" id="project[type]">
-                                <option value="<i class="fa fa-android"></i>Android">Android</option>
-                                <option value="Web Development">Web Development</option>
+                                <option value='<i class="fa fa-android"></i>Android'Android</option>
+                                <option value='<i class="fa fa-desktop"></i>Web Development'>Web Development</option>
                                 <option value="Machine Learning">Machine Learning</option>
                                 <option value="AI">Artificial Intelligence</option>
                                 <option value="Others">Others</option>
