--- a/views/partials/landing-navbar.ejs
+++ b/views/partials/landing-navbar.ejs
@@ -39,12 +39,12 @@
                         <% } %>
 
                         <div class="m-3 text-center">
-                            <a href="projects" class="btn btn-info m-1">View All Projects</a>
-                            <a href="projects/new" class="btn btn-success m-1">Post Project</a>
+                            <a href="/projects" class="btn btn-info m-1">View All Projects</a>
+                            <a href="/projects/new" class="btn btn-success m-1">Post Project</a>
                         </div>
                         <div class="m-3 text-center">
-                            <a href="events" class="btn btn-info m-1">View All Events</a>
-                            <a href="events/new" class="btn btn-success m-1">Submit an Event</a>
+                            <a href="/events" class="btn btn-info m-1">View All Events</a>
+                            <a href="/events/new" class="btn btn-success m-1">Submit an Event</a>
                         </div>
                         </div>
                 </div>
