Final not till now

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -34,7 +34,7 @@
                                         <p class="card-text">
                                             <% var EventDesc = event.breif ;
                               try{
-                                  var EventDesc =EventDesc.substr(0,70) ;
+                                  var EventDesc =EventDesc.substr(0,80) ;
                               }catch(e){
 
                               }%>
@@ -83,7 +83,7 @@
                                         <p class="card-text">
                                             <% var projectDesc = project.shortDesc ;
                                         try{
-                                            var projectDesc = project.shortDesc.substr(0,70) ;
+                                            var projectDesc = project.shortDesc.substr(0,80) ;
                                         }catch(e){
 
                                         }%>
@@ -147,17 +147,17 @@
                 <h1>Core Team</h1>
                 <div class="row" style="font-size:.9rem;">
                     <div class="col-lg-1  "></div>
-                    <div class="col-lg-2 col-sm-4 p-1 m-1">
+                    <div class="col-lg-2  p-1 m-1">
                         <div class="card">
                             <img class="card-img-top " src="https://res.cloudinary.com/skpuri/image/upload/c_scale,w_1077/v1522903889/shubhamPuri.jpg" alt="Card image" style="width:100%">
                             <div class="card-body">
                                 <h4 class="card-title" >Shubham Puri</h4>
-                                <p class="card-text">3rd year undergard, flag bearer of the project adept in backend, frontend and Competitive Programming</p>
+                                <p class="card-text">3rd year undergrad, flag bearer of the project adept in backend, frontend and Competitive Programming</p>
 
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2 col-sm-4 p-1 m-1">
+                    <div class="col-lg-2  p-1 m-1">
                         <div class="card">
                             <div class="card-body">
                                 <h4 class="card-title" >Prathmesh Maurya</h4>
@@ -168,7 +168,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-2 col-sm-4 p-1 m-1">
+                    <div class="col-lg-2  p-1 m-1">
                         <div class="card">
                             <img class="card-img-top" src="https://pbs.twimg.com/profile_images/758916607523508224/HtPcWsuc_400x400.jpg" alt="Card image" style="width:100%">
                             <div class="card-body">
@@ -178,7 +178,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2 col-sm-4 p-1 m-1">
+                    <div class="col-lg-2  p-1 m-1">
                         <div class="card">
                             <div class="card-body">
                                 <h4 class="card-title">Lakshay Sharma</h4>
@@ -188,7 +188,7 @@
                             <img class="card-img-bottom" src="http://res.cloudinary.com/skpuri/image/upload/v1522905143/IMG-20180405-WA0003.jpg" style="width:100%">
                         </div>
                     </div>
-                    <div class="col-lg-2 col-sm-4 p-1 m-1">
+                    <div class="col-lg-2  p-1 m-1">
                         <div class="card">
                             <img class="card-img-top" src="https://res.cloudinary.com/skpuri/image/upload/v1522905314/IMG-20180405-WA0002.jpg" alt="Card image" style="width:100%">
                             <div class="card-body">
