--- a/views/projects/show.ejs
+++ b/views/projects/show.ejs
@@ -14,7 +14,7 @@
                                             <b> <%= ptime.getFullYear() %></b>
                             </div>
                             <span> Submitted by - <%= project.author.username %></span>
-                            <div> Project Type : <strong><%= project.type %></strong></div>
+                            <div> Project Type : <strong><%- project.type %></strong></div>
 
                             <div> Technology to be used : <strong><%= project.technology %></strong></div>
                             <div class=" border rounded  m-2 p-1 "><strong> Brief :</strong>
