--- a/views/projects/index.ejs
+++ b/views/projects/index.ejs
@@ -13,7 +13,7 @@
                                         <h5 class="card-title"><strong>
                                     <%= project.title%></strong>
                                     <span class="float-right btn btn-dark btn-sm">
-                                     <%= project.type%>
+                                     <%- project.type%>
                                     </span>
                                     </h5>
                                         <h6 class="card-subtitle mb-2 text-muted">
